--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iron Man Tribute Page</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             <p class="sub-heading">Genius, Billionaire, Playboy, Philanthropist</p>
         </div>
         <div class="hero-img">
-            <img src="/images/ironman.png" alt="Iron man">
+            <img src="./images/ironman.png" alt="Iron man">
         </div>
     </section>
     <section class="history">
@@ -192,7 +192,7 @@
         <h2 class="heading">QUALITIES</h2>
         <div class="ql">
             <div class="image">
-                <img src="/images/tonystark.jpg" alt="Tony Stark">
+                <img src="./images/tonystark.jpg" alt="Tony Stark">
             </div>
             <div class="list">
                 <ol class="paragraph">
